# weekly-report-helper

./: .gitignore  CLAUDE.md  PROBLEMS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  安装说明.md
.github/workflows/: build.yml
src/: App.vue  api.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  parser.rs  report.rs
src/components/: CarryOverModal.vue  CountdownRing.vue  PlanInputModal.vue  PlanTaskTable.vue  ReportPreviewModal.vue  SettingsModal.vue  TaskPickerModal.vue
src/lib/: miniWindow.ts
src/stores/: clock.ts  plan.ts  report.ts  settings.ts  timer.ts
src/types/: index.ts
src/views/: PlanInputView.vue  ReportView.vue  TimerView.vue
