[package]
name = "weekly-report-app"
version = "0.1.0"
description = "工作周报助手 - 番茄钟驱动的周报生成工具"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "weekly_report_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
